# mino-fake-or-real

./: .env  README.md  pyproject.toml
src/: index.ipynb
