[tool.pdm]
lint = ["black"]
[project]
name = "a"
version = "1.0.0"
description = ""
authors = [{ name = "timelic", email = "i@timel.ink" }]
dependencies = [
    "jupyter>=1.0.0",
    "seaborn>=0.12.2",
    "praat-parselmouth>=0.4.3",
    "setuptools>=65.6.3",
    "ffmpeg-python>=0.2.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }
